pushing to github

--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -76,14 +76,14 @@
   </div>
 </nav>
 
-<!-- First Container -->
+<!-- First Container general statement-->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Work Experience</h3>
   <img src="work.jpg" class="img-responsive img-circle margin" style="display:inline" alt="violin" width="350" height="350">
   <h3>I'm a dedicated, hard-working individual and have demonstrated this over the past three years as an employee of Phelans' Pharmacy in Glanmire.</h3>
 </div>
 
-<!-- Second Container -->
+<!-- Second Container stating work experience history -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="mainheading">Work Experience Details</h3>
   <br/>
@@ -91,7 +91,7 @@
         <p><strong>When I Worked:</strong> Began working here February 2015-present</p>
 </div>
 
-<!-- Third Container (Grid) -->
+<!-- Third Container (Grid) with skills details and images -->
 <div class="container-fluid bg-3 text-center">    
   <h2 class="margin">Skills</h2><br>
   <div class="row">
