--- a/ebusiness/shophome.html
+++ b/ebusiness/shophome.html
@@ -5,7 +5,6 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
 
 <style>
 
@@ -22,7 +21,7 @@ body {margin:0;
 }
 
 .button {
-    background-color: #008CBA; /* Blue */
+    background-color: #FFD1DC; /* Pink */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -30,10 +29,12 @@ body {margin:0;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font: #333;
     border-radius: 6px;
 }
   
 </style>
+</head>
 
 <body>
   
@@ -51,10 +52,10 @@ body {margin:0;
     <br/>
     <h1>Amy's Cloud Store</h1>
     <br/>
-
-    <a href = "Ebus1.php"><button>Products</button></a>
-    <br/>
-    <a href = "aboutcloud.html"><button>About Cloud</button></a>
+    <center><a href="Ebus1.php" class="button"><strong>Products</strong></a>
+        	<br/>
+        	<br/>
+    <a href="aboutcloud.html" class="button"><strong>About Cloud</strong></a></center>
     </center> </font>
     </p>
     
