--- a/interests/cloudservices.html
+++ b/interests/cloudservices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <head>
         <meta charset="utf-8"/>
@@ -62,15 +62,22 @@
         	<!--Page 3 My personal use of the cloud-->
         	<div class="section" id="section3"><h3>What cloud technologies do I use?</h3><br/>
         	1. Cloud 9
+        	<br/>
         	2. Gmail
+        	<br/>
         	3. Apple Music
+        	<br/>
         	4. Netflix
+        	<br/>
         	5. iCloud (Apple)
+        	<br/>
         	6. Dropbox
+        	<br/>
         	7. Google Drive
+        	<br/>
         	8. Social Media (Facebook, Twitter, Instagram etc)
         	<br/>
-        	
+        	<br/>
         	<center><a href="travel.html" class="button">Travel</a>
         	<br/>
         	<br/>
