--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,7 @@ body {margin:0;
   <ul>
   <li><a class="active" href="../homepage.html">Home</a></li>
   <li><a href="../cv/cv_page1.html">CV</a></li>
-  <li><a href="../interests/sports.html">Interests</a></a></li>
+  <li><a href="../interests/sports.html">Interests</a></li>
   <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
 </ul>
 
@@ -109,6 +109,6 @@ body {margin:0;
     </div></a></center>
     </center>
     </p>
-    
+    </font>
 </body>
 </html>
