--- a/interests/sports.html
+++ b/interests/sports.html
@@ -41,7 +41,7 @@
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
                 <li><a href="../interests/sports.html">Interests</a></a></li>
-                <li><a href="shophome.html">E-Business Homepage</a></li>
+                <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
             
@@ -54,7 +54,7 @@
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
                 <li><a href="../interests/sports.html">Interests</a></a></li>
-                <li><a href="shophome.html">E-Business Homepage</a></li>
+                <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
         	
