pushing to github

--- a/ebusiness/shophome.html
+++ b/ebusiness/shophome.html
@@ -16,6 +16,7 @@ body {
 
 body {margin:0;
       font: 20px Montserrat, sans-serif;
+      color: white;
       line-height: 1.8;
       background-color:#DFECFF;
 }
@@ -29,7 +30,6 @@ body {margin:0;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    font: #333;
     border-radius: 6px;
 }
   
@@ -41,11 +41,10 @@ body {margin:0;
     <ul>
   <li><a class="active" href="../homepage.html">Home</a></li>
   <li><a href="../cv/cv_page1.html">CV</a></li>
-  <li><a href="../interests/sports.html">Interests</a></a></li>
+  <li><a href="../interests/sports.html">Interests</a></li>
   <li><a href="shophome.html">E-Business Homepage</a></li>
 </ul>
   
-    <font color="white">
     IS1113 Project
     <center>
     <br/> 
@@ -56,8 +55,7 @@ body {margin:0;
         	<br/>
         	<br/>
     <a href="aboutcloud.html" class="button"><strong>About Cloud</strong></a></center>
-    </center> </font>
-    </p>
+    </center> 
     
 </body>
 </html>
