--- a/interests/cloudservices.html
+++ b/interests/cloudservices.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">    
+
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
         <meta charset="utf-8"/>
         <title>Cloud Services
         </title>
@@ -41,7 +42,7 @@
             <ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
@@ -55,7 +56,7 @@
             <ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
@@ -78,16 +79,16 @@
         	8. Social Media (Facebook, Twitter, Instagram etc)
         	<br/>
         	<br/>
-        	<center><a href="travel.html" class="button">Travel</a>
+        	<a href="travel.html" class="button">Travel</a>
         	<br/>
         	<br/>
-        	<a href="sports.html" class="button">Sports & Music</a></center>
+        	<a href="sports.html" class="button">Sports & Music</a>
         
         	    <!--Links to other sections-->
         	<ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
