--- a/interests/travel.html
+++ b/interests/travel.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">    
+  
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <meta charset="utf-8"/>
         <title>Travel</title>
         <link rel="stylesheet" href="../mystylesheet.css" type="text/css" />
@@ -28,24 +29,24 @@
     <body>
         
         <div id="pagepiling">
-            <div class="section" id="section1"><h3><mark>Most travelled to: Portland, Oregon. </mark></h3></br>
+            <div class="section" id="section1"><h3><mark>Most travelled to: Portland, Oregon. </mark></h3><br/>
             <mark>My Uncle lives in Portland and I've been lucky enough to have visited him many times. Portland is known for its quirks and weird ways and that's exactly what I love about
             the city. The beauty of the outdoors is truly showcased in the state of Oregon too. You have the chance to swim at the beach and ski in the same day, an extremely rare opportunity in my eyes 
             anyway!</mark> 
             <ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
             </div>
-        	<div class="section" id="section2"><h3><mark>Want to visit: Vienna, Austria.</mark> </h3></br>
+        	<div class="section" id="section2"><h3><mark>Want to visit: Vienna, Austria.</mark> </h3><br/>
         	<mark>Vienna has always been at the top of my list in terms of my dream travel destination. I think its the musical culture that's responsible for my real interest in the city. It's always been
         	my dream to attend one of the New Year's Day Concerts held at the Musikverein in Vienna. Hopefully I will, someday!</mark> 
         	<ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
@@ -60,7 +61,7 @@
         	    <ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
