--- a/interests/sports.html
+++ b/interests/sports.html
@@ -17,9 +17,7 @@
         <!--pagepiling-->
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.4/jquery.pagepiling.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.4/jquery.pagepiling.js"></script>
         
-        <script type = "text/javascript">
              $(document).ready(function() {
                $('#pagepiling').pagepiling({
                 });
@@ -54,7 +52,7 @@
         	<ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
         	</div>
@@ -67,7 +65,7 @@
         	    <ul>
                 <li><a class="active" href="../homepage.html">Home</a></li>
                 <li><a href="../cv/cv_page1.html">CV</a></li>
-                <li><a href="../interests/sports.html">Interests</a></a></li>
+                <li><a href="../interests/sports.html">Interests</a></li>
                 <li><a href="../ebusiness/shophome.html">E-Business Homepage</a></li>
                 </ul>
                 
