pushing to github

--- a/ebusiness/shophome.html
+++ b/ebusiness/shophome.html
@@ -37,6 +37,8 @@ body {margin:0;
 </head>
 
 <body>
+    
+            	    <!--Links to other sections-->
   
     <ul>
   <li><a class="active" href="../homepage.html">Home</a></li>
