--- a/interests/cloudservices.html
+++ b/interests/cloudservices.html
@@ -77,6 +77,8 @@
         	8. Social Media (Facebook, Twitter, Instagram etc)
         	<br/>
         	<br/>
+        	
+        	<!--Buttons to view other interest pages-->
         	<a href="travel.html" class="button">Travel</a>
         	<br/>
         	<br/>
