--- a/interests/travel.html
+++ b/interests/travel.html
@@ -54,6 +54,9 @@
         	<mark>No need to explain this one.. I couldn't image myself living forever anywhere else.     
         	    </mark>
         	<br/>    
+        	
+        	
+        	<!--Buttons to view other interest pages-->
         	<a href="cloudservices.html" class="button">Cloud Services</a>
         	<br/>
         	<br/>
